--- a/phero-task-1/package.json
+++ b/phero-task-1/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.0.0",
+    "@stripe/stripe-js": "^1.50.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "eslint-config-react-app": "^7.0.1",
