--- a/phero-task-1/package.json
+++ b/phero-task-1/package.json
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@stripe/react-stripe-js": "^2.0.0",
     "@stripe/stripe-js": "^1.50.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "eslint-config-react-app": "^7.0.1",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-spinners": "^0.13.8",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
